<resources>
    <string name="app_name">ScoreBoard</string>
    <string name="team_one_points">00</string>
    <string name="team_two_points">00</string>
    <string name="team_one_name">Team 1</string>
    <string name="team_two_name">Team 2</string>
    <string name="game_time_one">First Time</string>
    <string name="game_time_two">Second Time</string>
    <string name="game_time_three">Third Time</string>
    <string name="game_time_four">Fourth Time</string>
    <string name="game_finished">Finished</string>
    <string name="vs">VS</string>
    <string name="match_history">Match History</string>
    <string name="default_date">dd/MM/yyyy hh:mm:ss</string>
    <string name="nba_description">NBA logo image</string>

    <!-- Buttons Text -->
    <string name="button_reset">Stop</string>
    <string name="button_play">Play</string>
    <string name="button_pause">Pause</string>
    <string name="button_register">Register</string>
    <string name="button_create">Create Game</string>
    <string name="button_history">Match History</string>

    <!-- Buttons Description -->
    <string name="button_save_game">Save game</string>
    <string name="random_score">Random Score board</string>
    <string name="remove_match">Remove matches</string>

    <!-- Hints Text -->
    <string name="team_one_hint">Team 1</string>
    <string name="team_two_hint">Team 2</string>

</resources>